--- a/room3/styles.css
+++ b/room3/styles.css
@@ -325,3 +325,46 @@ input[type="number"] {
     margin-left: 30%;
     margin-right: 30%;
 }
+
+
+
+
+
+
+
+#upload-container {
+            text-align: center;
+        }
+
+        #image-preview {
+            max-width: 100%;
+            max-height: 80vh;
+            margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #image-preview img {
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 10px;
+        }
+
+        #image-upload {
+            display: none;
+        }
+
+#upload-button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #upload-button:hover {
+            background-color: #45a049;
+        }
