--- a/room1/styles.css
+++ b/room1/styles.css
@@ -356,6 +356,7 @@ input[type="number"] {
         }
 
 #upload-button {
+    width:40%;
             background-color: #4CAF50;
             color: white;
             padding: 10px 20px;
