--- a/room1/styles.css
+++ b/room1/styles.css
@@ -456,7 +456,7 @@ input[type="number"] {
     right: 20px;
     display: none;
     flex-direction: column;
-    z-index: 1000;
+    z-index: 1001;
     opacity: 0;
     transform: scale(0.8);
     transition: opacity 0.3s, transform 0.3s;
@@ -507,6 +507,23 @@ input[type="number"] {
     height: auto;
     border: 1px solid #ccc;
     border-radius: 4px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    display: none;
+    z-index: 1000;
+}
+
+
+
+
+
 }
 
 #noteIt{
