--- a/room1/styles.css
+++ b/room1/styles.css
@@ -28,18 +28,22 @@ input[type="number"] {
 }
 
 button {
-    padding: 5px 10px;
+    padding: 8px 16px;
     font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: #00ff15;
+    color: black;
     border: none;
     border-radius: 4px;
     margin: 5px;
     cursor: pointer;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 30px;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color:red;
+    color: black;
 }
 
 #answerSheet {
@@ -244,14 +248,16 @@ button:hover {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border: 2px solid #0000009c;
     border-radius: 50%; /* Makes the shape a circle */
     margin: 0 8px;
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
   margin-top:5px;
+  font-weight: lighter;
+  margin-left:8px;
 }
 
 .last-element-display {
@@ -273,7 +279,7 @@ button:hover {
 
 #timer{
  color:red;
-  font-size: 20px;
+  font-size: 30px;
   position:fixed;
   
   
@@ -282,11 +288,14 @@ button:hover {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgb(0, 0, 0);
-    color: white;
+    background-color:green;
+    color:white;
     padding: 15px;
     text-align: center;
     width: 100%;
+    font-weight: bold;
+    
+    
 
   
   
@@ -428,8 +437,8 @@ input[type="number"] {
 
 
 .chat-bubble {
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
     background-color: #007bff;
     color: white;
     border-radius: 50%;
@@ -524,9 +533,23 @@ input[type="number"] {
 
 
 
-}
+
 
 #noteIt{
- color:navy;
+ color:black;
     font-size:20px;
+    background-color: rgb(255, 102, 0);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-weight: bolder;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    margin-top: 10px;
+}
+
+[id^="question"]{
+    
+    padding-top: 50px;
+    padding-left: 35px;
+    align-content: center;
 }
