--- a/room1/styles.css
+++ b/room1/styles.css
@@ -455,7 +455,7 @@ input[type="number"] {
     font-size:15px;
     font-weight: bold;
     border: 3px solid darkred;
-background-image: url("question1.jpg");
+background-image: url("pop_q_papers.jpg");
 background-size:cover;
 background-repeat: no-repeat;
 
