--- a/room1/styles.css
+++ b/room1/styles.css
@@ -1,8 +1,12 @@
 body {
     font-family: Arial, sans-serif;
+    
+   
     margin: 0;
     padding: 0;
-    background-color: #f2f2f2;
+    height: 100vh;
+    background: url('https://images.unsplash.com/photo-1457276587196-a9d53d84c58b?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+    background-size: cover;
 }
 
 .container {
@@ -279,7 +283,7 @@ button:hover {
 
 #timer{
  color:red;
-  font-size: 30px;
+  font-size: 25px;
   position:fixed;
   
   
@@ -290,9 +294,9 @@ button:hover {
     transform: translateX(-50%);
     background-color:green;
     color:white;
-    padding: 15px;
+    padding: 10px;
     text-align: center;
-    width: 100%;
+   
     font-weight: bold;
     
     
@@ -544,17 +548,19 @@ background-repeat: no-repeat;
 
 
 
-
-#noteIt{
- color:black;
-    font-size:20px;
-    background-color: rgb(255, 102, 0);
+#noteIt {
+    color: #000;
+    font-size: 20px;
+    background-color: rgb(0 253 17 / 47%);
     padding-top: 30px;
     padding-bottom: 30px;
     font-weight: bolder;
     border-radius: 20px;
     margin-bottom: 30px;
     margin-top: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 [id^="question"]{
@@ -564,29 +570,37 @@ background-repeat: no-repeat;
     align-content: center;
 }
 
-
-
 .feedback-message {
-    margin-top: 40px;
-    font-size: 15px;
-    color: red; /* Green color for the feedback message */
-  background-color: yellow;
-  text-align: center;
-  border-radius: 15px;
-  padding-top:10px;
-  padding-bottom:10px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    text-align: center;
+    border-radius: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 10px;
+    font-size:larger;
+    border: 2px solid green; 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bolder;
+
+    animation: float 5s infinite ease-in-out;
+    
+}
+.highlight {
+    font-weight: bold;
+    background:rgba(0, 47, 255, 0.596);
+    color: black;
+}
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-30px);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
-
-@media print {
-    .option.selected {
-        background-color: #00ff00; /* Green color for selected options */
-    }
-    .option.correct {
-        background-color: #aaffaa; /* Light green for correct answers */
-    }
-    .option.incorrect {
-        background-color: #ffaaaa; /* Light red for incorrect answers */
-    }
-    /* Add any other necessary print-specific styles */
-}
